# woddi-harbor

./: .gitignore  CHANGELOG.md  README.md  harbor.sh  pyproject.toml  start.sh
app/: __init__.py  auth.py  backup.py  cache.py  cli.py  config.py  console.py  control.py  error_utils.py  field_cache.py  jobs.py  llm.py  mcp_lifecycle.py  modules.py  observability.py  operations.py  preflight.py  runtime.py  search.py  services.py  sources.py  state.py  tui.py  version.py  worker.py  worker_netbox.py  worker_openstack.py  worker_sap_docs.py  worker_security.py
config/: modules.json  sources.json
deploy/: Caddyfile  Caddyfile.local  grafana-dashboard.json  logrotate.conf  nginx.conf.tpl  prometheus.local.yml.tpl  prometheus.yml.tpl
docs/: ARCHITECTURE.md  HOWTO.md  INSTALL.md  OPERATIONS.md  PRIVACY.md  PRODUCT.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.10.md  RELEASE_NOTES_v0.3.11.md  RELEASE_NOTES_v0.3.12.md  RELEASE_NOTES_v0.3.13.md  RELEASE_NOTES_v0.3.14.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.3.6.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.3.8.md  RELEASE_NOTES_v0.3.9.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.2.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.5.2.md  RELEASE_NOTES_v0.5.3.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  RELEASE_NOTES_v0.6.2.md  RELEASE_NOTES_v0.6.4.md  RELEASE_NOTES_v0.6.5.md  RELEASING.md  RUNBOOK.md  SECURITY.md  SLO.md  TRAY.md  UPGRADE.md
scripts/: bootstrap_sles.sh  bootstrap_ubuntu.sh  install_local_tls.sh  install_monitoring.sh  install_production.sh  install_tray.sh
systemd/: woddi-harbor-backup.service.tpl  woddi-harbor-backup.timer  woddi-harbor-jobs.service.tpl  woddi-harbor-llm-tunnel.service.tpl  (+3 more)
(+42 files in other folders)
