[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woddi-harbor"
version = "0.1.0"
description = "Local-first AI control hub for external LLMs, search modules, and MCP services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.8,<3.0",
  "rich>=14.0,<15.0",
  "textual>=0.76,<1.0",
  "typer>=0.16,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
woddi-harbor = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
