[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woddi-harbor"
version = "0.4.0"
description = "Local-first AI control hub for external LLMs, search modules, and MCP services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "httpx>=0.28,<1.0",
  "openstacksdk>=4.7,<5.0",
  "pydantic>=2.8,<3.0",
  "rich>=14.0,<16.0",
  "textual>=0.76,<1.0",
  "typer>=0.16,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "pip-audit>=2.8,<3.0",
  "pytest>=8.3,<10.0",
  "ruff>=0.11,<1.0",
]

[project.scripts]
woddi-harbor = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tools*"]

[tool.setuptools.package-data]
app = ["web/*"]

[tool.ruff]
target-version = "py310"
line-length = 140
exclude = [".venv", "data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E501", "UP045"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["^data/"]
